Adjust layout, prevent linear-gradient wrap (rows)

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,12 @@
 .sections {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 2fr 1fr .5fr;
+    grid-gap: 20%;
+    place-items: center;
+}
+
+.sections3 {
+    grid-row-start: 3;
+    padding-right: 5%;
 }
